# easydns

./: .gitignore  Cargo.toml  LICENSE  README.md  easydns.toml  rust-toolchain.toml  test_filter.txt
.cargo/: config.toml
src/: buffer.rs  cache.rs  client.rs  config.rs  cursor.rs  error.rs  filter.rs  handler.rs  main.rs  protocol.rs  scheduler.rs  socket.rs  system.rs  timer.rs
src/cache/: expired_strategy.rs  limit_map.rs  mod.rs  record.rs  strategy.rs  timeout_strategy.rs
src/cache/cache_record/: ip_record.rs  mod.rs  soa_record.rs
src/cursor/: array_buf.rs  mod.rs
src/handler/: cache_handler.rs  domain_filter.rs  ip_maker.rs  legal_checker.rs  mod.rs  query_sender.rs  server.rs
src/handler/server_group/: combine_server_sender.rs  fast_server_sender.rs  mod.rs  prefer_server_sender.rs  query_executor.rs
src/protocol/: basic.rs  mod.rs  question.rs
src/protocol/answer/: failure.rs  ipv4.rs  mod.rs  no_such_name.rs  soa.rs
src/protocol/answer/resource/: basic.rs  cname.rs  ipv4.rs  mod.rs  soa.rs
src/protocol/query/: mod.rs
src/protocol_new/: basic.rs  header.rs  mod.rs  question.rs
src/protocol_new/answer/: failure.rs  ipv4.rs  mod.rs  no_such_name.rs  soa.rs
src/protocol_new/answer/resource/: basic.rs  cname.rs  ipv4.rs  mod.rs  soa.rs
src/protocol_new/query/: mod.rs
tests/: test.rs
tests/resources/: covercast_filter.txt
