[package]
name = "easydns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
signal-hook-registry = "1.4.0"
once_cell = "1.8.0"
dashmap = " 4.0.2"

[package.metadata.scripts]
runner = """qemu-mipsel -L /home/dmj/mipsel-linux-uclibc/mipsel-linux-uclibc/sysroot {0}"""
build = "cargo build --target mipsel-unknown-linux-uclibc -Z build-std"
run = "cargo run --target mipsel-unknown-linux-uclibc -Z build-std"
test = "cargo test --target mipsel-unknown-linux-uclibc -Z build-std"
release = "cargo build --target mipsel-unknown-linux-uclibc --release -Z build-std"
