[package]
name = "easydns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
dashmap = " 4.0.2"
tokio = { version = "1.9.0", features = ["full"] }
futures-util = "0.3.16"
tokio-icmp = "0.4.0"
async-trait = "0.1.51"
regex = "1.5"
reqwest = "0.11"
simple_logger = "1.13"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
toml = "0.5"

[patch.crates-io]
socket2 = { git = "https://github.com/dunmengjun/socket2.git" }
tokio-icmp = { git = "https://github.com/dunmengjun/tokio-icmp.git", branch = "main" }

[package.metadata.scripts]
runner = """qemu-mipsel -L /home/dmj/mipsel-linux-uclibc/mipsel-linux-uclibc/sysroot {0}"""
build = "OPENSSL_DIR=/home/dmj/openssl cargo build --target mipsel-unknown-linux-uclibc -Z build-std"
run = "OPENSSL_DIR=/home/dmj/openssl cargo run --target mipsel-unknown-linux-uclibc -Z build-std"
test = "OPENSSL_DIR=/home/dmj/openssl cargo test --target mipsel-unknown-linux-uclibc -Z build-std"
release = "OPENSSL_DIR=/home/dmj/openssl cargo build --target mipsel-unknown-linux-uclibc --release -Z build-std"
