[package]
name = "easydns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
dashmap = " 4.0.2"
tokio = { version = "1.9.0", features = ["full"] }
futures-util = "0.3.16"
tokio-icmp = "0.4.0"
async-trait = "0.1.51"
regex = "1.5"
simple_logger = "1.13"
log = "0.4"
toml = "0.5"

[patch.crates-io]
socket2 = { git = "https://github.com/dunmengjun/socket2.git" }
tokio-icmp = { git = "https://github.com/dunmengjun/tokio-icmp.git", branch = "main" }

[package.metadata.scripts]
runner = """qemu-mipsel -L /home/dmj/mipsel-linux-uclibc/mipsel-linux-uclibc/sysroot {0}"""
build = "cargo build --target mipsel-unknown-linux-uclibc -Z build-std"
run = "cargo run --target mipsel-unknown-linux-uclibc -Z build-std"
test = "cargo test --target mipsel-unknown-linux-uclibc -Z build-std"
release = "cargo build --target mipsel-unknown-linux-uclibc --release -Z build-std"
